# SignToolPlayground

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  REFACTOR.md
.github/workflows/: build.yml  build_windows.yml  ci.yml
cmake/: Architecture.cmake  CCKYBuildForHost.cmake  PDB.cmake  Sanitizers.cmake  Targets.cmake  ThirdParty.cmake
docs/certmgr/: README.md
docs/signtool/: README.md
include/ccky/app/: application.h  backend.h  command.h
include/ccky/app/certmgr/: command.h
include/ccky/app/signtool/: command.h
include/cli/: CliParser.h  Command.h  CommandRegistry.h
include/commands/: CertMgrCommand.h  MakeCertCommand.h  Pvk2PfxCommand.h  SignToolCommand.h
include/crypto/: AuthenticodeSigner.h  CckyException.h  CertGenerator.h  Certificate.h  Console.h  CryptoFactory.h  FileTypeDetector.h  ICertStore.h  PrivateKey.h  Pvk2PfxConverter.h  PvkKey.h  TimeFormatter.h
include/crypto/openssl/: OpenSslCert.h  OpenSslException.h  OpenSslHelper.h  OpenSslPrivateKey.h  OpenSslStore.h  OpenSslWrapper.h  PvkHelper.h  SpcStructures.h  X509NameParser.h  ZipArchive.h
include/crypto/windows/: WinCert.h  WinHelper.h  WinPrivateKey.h  WinStore.h  WinWrapper.h  WindowsException.h
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp  command.cpp
src/app/certmgr/: README.md  command.cpp
src/app/signtool/: README.md  command.cpp
src/backend/: windows_backend.cpp
src/cli/: CMakeLists.txt  CliParser.cpp  Command.cpp  CommandRegistry.cpp
src/commands/: CMakeLists.txt  CertMgrCommand.cpp  MakeCertCommand.cpp  Pvk2PfxCommand.cpp  SignToolCommand.cpp
src/crypto/: CMakeLists.txt  Console.cpp  FileTypeDetector.cpp  PvkKey.cpp  TimeFormatter.cpp
src/crypto/openssl/: AuthenticodeSigner.cpp  CertGenerator.cpp  Console.cpp  CryptoFactory.cpp  FileTypeDetector.cpp  OpenSslCert.cpp  OpenSslException.cpp  OpenSslHelper.cpp  OpenSslStore.cpp  OpenSslWrapper.cpp  Pvk2PfxConverter.cpp  PvkHelper.cpp  SpcStructures.cpp  X509NameParser.cpp  ZipArchive.cpp
src/crypto/windows/: CertGenerator.cpp  Console.cpp  CryptoFactory.cpp  FileTypeDetector.cpp  Pvk2PfxConverter.cpp  WinCert.cpp  WinHelper.cpp  WinPrivateKey.cpp  WinSigner.cpp  WinStore.cpp  WindowsException.cpp
testdata/: example.cer
tests/: CMakeLists.txt  CckyTest.h  Given_AppxStore.cpp  Given_CckyHelp.cpp  Given_CertMgr.cpp  Given_CliParser.cpp  Given_CommandRegistry.cpp  Given_CryptoFactory.cpp  Given_FileTypeDetector.cpp  Given_MakeCert.cpp  Given_PeStore.cpp  Given_Pvk2Pfx.cpp  Given_PvkKey.cpp  Given_SignTool.cpp  Given_X509NameParser.cpp  Given_ZipArchive.cpp  application_tests.cpp  windows_integration_tests.cpp
tests/data/: 1234.cer  1234.pvk  ccky.appx  ccky.cer  ccky.pfx  ccky.pvk  lxmonika.cer  lxmonika.sys  test.appx
tests/data/output/: certmgr_add_badsourcestore_stderr.txt  certmgr_add_missingdestinationfilename_stderr.txt  certmgr_del_badsha1_stderr.txt  certmgr_del_nomatchingsha1_stderr.txt  certmgr_display_missingsourcefilename_stderr.txt  certmgr_display_stdout.txt  certmgr_help_stderr.txt  certmgr_stdout.txt  makecert_badauthority_stderr.txt  makecert_baddate_stderr.txt  makecert_badstartdate_stderr.txt  makecert_badsubjectprovider_stderr.txt  makecert_existingpvkbadpassword_stderr.txt  makecert_helpbasic_stderr.txt  makecert_helpextended_stderr.txt  makecert_iconly_stderr.txt  makecert_issuerpvkbadpassword_stderr.txt  makecert_ivicwithr_stderr.txt  makecert_ivwithoutic_stderr.txt  makecert_missingargs_stderr.txt  makecert_newpvksecondpromptbadpassword_stderr.txt  makecert_twofiles_stderr.txt  pvk2pfx_badfile_stderr.txt  pvk2pfx_badpassword_stderr.txt  pvk2pfx_badproviderversion_stderr.txt  pvk2pfx_filenotfound_stderr.txt  pvk2pfx_help_stderr.txt  pvk2pfx_outputfileexists_stderr.txt  signtool_catdb_help_stderr.txt  signtool_help_stderr.txt  signtool_invalidcommand_stderr.txt  signtool_remove_help_stderr.txt  signtool_remove_signed_stdout.txt  signtool_remove_signedandbad_stdout.txt  signtool_remove_unsigned_stderr.txt  signtool_remove_unsigned_stdout.txt  signtool_remove_verbose_signed_stdout.txt  signtool_remove_verbose_signedandbad_stderr.txt  signtool_remove_verbose_signedandbad_stdout.txt  signtool_remove_verbose_unsigned_stdout.txt  (+16 more)
